--- a/style/style.css
+++ b/style/style.css
@@ -38,12 +38,20 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr 50px;
     grid-template-areas: 
-        "text-copy signup"
-        "footer footer";
+        "content"
+        "footer";
     min-height: 100vh;
+    
+}
+
+.content {
+    grid-area: content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /*********************
@@ -53,26 +61,34 @@ body {
 
 .text-copy {
     color: #ffffff;
-    grid-area: text-copy;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 500px;
+    padding-right: 25px;
 }
 
 .text-copy h1 {
     font-weight: 700;
+    font-size: 3em;
+    line-height: 1.2;
+}
+
+.text-copy p {
+    font-weight: 600;
 }
 
 /*********************
     SIGNUP AREA
 *********************/
 .signup {
-    grid-area: signup;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 500px;
+    padding-left: 25px;
 }
 
 .pricing {
@@ -80,6 +96,8 @@ body {
     color: #ffffff;
     width: 100%;
     text-align: center;
+    border-radius: 5px;
+    padding: 0 15px;
 }
 
 .pricing span {
@@ -89,6 +107,9 @@ body {
 .form {
     background-color: #ffffff;
     width: 100%;
+    margin-top: 25px;
+    border-radius: 5px;
+    padding: 15px;
 }
 
 form {
@@ -102,12 +123,25 @@ form {
     display: none;
 }
 
+.form input {
+    width: 90%;
+    margin: 15px;
+    height: 40px;
+    padding: 5px;
+    font-size: 1em;
+}
+
 .form #submit {
     background-color: hsl(154, 59%, 51%);
     color: #ffffff;
     border: none;
     border-radius: 5px;
     align-self: center;
+    text-transform: uppercase;    
+    box-shadow: 0 5px hsl(154, 59%, 46%);
+    padding: 25px 0 35px 0;
+    font-weight: 600;
+    width: 93%;
 }
 
 .form .terms {
@@ -137,6 +171,16 @@ footer {
 /*********************
     MEDIA QUERIES
 *********************/
+
+@media (max-width: 1250px) {
+    .text-copy {
+        width: 400px;
+    }
+
+    .signup {
+        width: 400px;
+    }
+}
 
 @media (max-width: 768px) {
     body {
