--- a/style/style.css
+++ b/style/style.css
@@ -23,11 +23,13 @@
 /*********************
     GENERAL STYLES
 *********************/
+* {
+    box-sizing: border-box;
+}
 
 html, body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 body {
@@ -38,18 +40,20 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1000px;
     grid-template-rows: 1fr 50px;
     grid-template-areas: 
         "content"
         "footer";
     min-height: 100vh;
+    justify-content: center;
     
 }
 
 .content {
     grid-area: content;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
 }
@@ -97,7 +101,8 @@ body {
     width: 100%;
     text-align: center;
     border-radius: 5px;
-    padding: 0 15px;
+    box-shadow: 0 7px rgba(0,0,0, .2)
+
 }
 
 .pricing span {
@@ -110,6 +115,7 @@ body {
     margin-top: 25px;
     border-radius: 5px;
     padding: 15px;
+    box-shadow: 0 7px rgba(0,0,0, .2);
 }
 
 form {
@@ -126,9 +132,11 @@ form {
 .form input {
     width: 90%;
     margin: 15px;
-    height: 40px;
-    padding: 5px;
-    font-size: 1em;
+    height: 45px;
+    padding: 5px 10px;
+    font-size: .9em;
+    border-radius: 5px;
+    font-family: 'Poppins', sans-serif;
 }
 
 .form #submit {
@@ -182,9 +190,78 @@ footer {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
+    .text-copy {
+        width: 350px;
+    }
+
+    .text-copy h1 {
+        font-size: 2.5em;
+    }
+
+    .pricing p {
+        font-size: .9em;
+    }
+
+    .signup {
+        width: 350px;
+    }
+}
+
+
+
+@media (max-width: 850px) {
     body {
         background: url(../images/bg-intro-mobile.png) hsl(0, 100%, 74%);
     }
+
+    .container {
+        justify-items: center;
+    }
+
+    .content {
+        flex-direction: column;
+    }
+
+    .text-copy {
+        text-align: center;
+        padding-right: 0;
+        padding-top: 50px;
+    }
+
+    .text-copy p {
+        margin-top: 0;
+        line-height: 1.7;
+    }
+
+    .pricing {
+        padding: 5px 75px;
+        width: 100%;
+    }
+
+    .signup {
+        margin: 50px 0;
+        padding-left: 0;
+    }
+
+
+    .form {
+        width: 100%;
+    }
     
+}
+
+@media (max-width: 400px) { 
+    .container {
+        grid-template-columns: 80%;
+    }
+
+    .content, .pricing, .signup, .text-copy {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
+
+
 }
