--- a/style/style.css
+++ b/style/style.css
@@ -136,7 +136,28 @@ form {
     padding: 5px 10px;
     font-size: .9em;
     border-radius: 5px;
+    color: hsl(249, 10%, 26%);
     font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+}
+
+.invalid-input {
+    border: 2px solid hsl(0, 100%, 74%);
+    background-image: url(../images/icon-error.svg);
+    background-repeat: no-repeat;
+    background-position: 95% 50%;
+    color: hsl(0,100%, 74%);
+
+}
+
+.invalid-status {
+    color: hsl(0,100%, 74%);
+    display: none;
+    text-align: right;
+    margin: 0 30px 0 0;
+    align-self: flex-end;
+    font-size: .8em;
+    font-weight: 500;
 }
 
 .form #submit {
@@ -166,11 +187,14 @@ form {
 
 
 
+
+
 /*********************
     FOOTER
 *********************/
 footer {
     grid-area: footer;
+    margin-top: 25px;
 }
 
 .attribution { font-size: 11px; text-align: center; }
