--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,11 @@
 /*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
+/*
 
 # Front-end Style Guide
 
@@ -24,7 +31,8 @@
     GENERAL STYLES
 *********************/
 * {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 html, body {
@@ -39,23 +47,39 @@ body {
 }
 
 .container {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1000px;
     grid-template-columns: 1000px;
+    -ms-grid-rows: 1fr 50px;
     grid-template-rows: 1fr 50px;
-    grid-template-areas: 
+        grid-template-areas: 
         "content"
         "footer";
     min-height: 100vh;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     
 }
 
 .content {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
     grid-area: content;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 /*********************
@@ -65,10 +89,19 @@ body {
 
 .text-copy {
     color: #ffffff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 500px;
     padding-right: 25px;
 }
@@ -87,10 +120,19 @@ body {
     SIGNUP AREA
 *********************/
 .signup {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 500px;
     padding-left: 25px;
 }
@@ -101,7 +143,8 @@ body {
     width: 100%;
     text-align: center;
     border-radius: 5px;
-    box-shadow: 0 7px rgba(0,0,0, .2)
+    -webkit-box-shadow: 0 7px rgba(0,0,0, .2);
+            box-shadow: 0 7px rgba(0,0,0, .2)
 
 }
 
@@ -115,14 +158,24 @@ body {
     margin-top: 25px;
     border-radius: 5px;
     padding: 15px;
-    box-shadow: 0 7px rgba(0,0,0, .2);
+    -webkit-box-shadow: 0 7px rgba(0,0,0, .2);
+            box-shadow: 0 7px rgba(0,0,0, .2);
 }
 
 form {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .form label {
@@ -155,7 +208,8 @@ form {
     display: none;
     text-align: right;
     margin: 0 30px 0 0;
-    align-self: flex-end;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
     font-size: .8em;
     font-weight: 500;
 }
@@ -165,9 +219,12 @@ form {
     color: #ffffff;
     border: none;
     border-radius: 5px;
-    align-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
     text-transform: uppercase;    
-    box-shadow: 0 5px hsl(154, 59%, 46%);
+    -webkit-box-shadow: 0 5px hsl(154, 59%, 46%);    
+            box-shadow: 0 5px hsl(154, 59%, 46%);
     padding: 25px 0 35px 0;
     font-weight: 600;
     width: 93%;
@@ -193,6 +250,8 @@ form {
     FOOTER
 *********************/
 footer {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
     grid-area: footer;
     margin-top: 25px;
 }
@@ -244,7 +303,10 @@ footer {
     }
 
     .content {
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
 
     .text-copy {
@@ -277,6 +339,7 @@ footer {
 
 @media (max-width: 400px) { 
     .container {
+        -ms-grid-columns: 80%;
         grid-template-columns: 80%;
     }
 
@@ -285,7 +348,4 @@ footer {
         margin: 0;
         padding: 0;
     }
-
-
-
 }
